{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 23,
  "lineage": "8f482e56-2e49-9651-2c84-7df35c147333",
  "resources": [
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b9a2c1d7b9c80d5c",
            "public_dns": "ec2-54-151-173-117.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.173.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:internet-gateway/igw-00284668658012d20",
            "id": "igw-00284668658012d20",
            "owner_id": "090047675933",
            "tags": {
              "Name": "symbiosis_igw_main"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9a2c1d7b9c80d5c",
            "id": "nat-002fed6318038c24b",
            "network_interface_id": "eni-027318aa2cb689a02",
            "private_ip": "10.0.1.6",
            "public_ip": "54.151.173.117",
            "subnet_id": "subnet-0def2f7e7706c1fa3",
            "tags": {
              "Name": "symbiosis_ngw_main"
            }
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.eip_main",
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_subnet.public_subnet",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:network-acl/acl-048d718dbdd294e82",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 8080
              }
            ],
            "id": "acl-048d718dbdd294e82",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 8080
              }
            ],
            "owner_id": "090047675933",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "symbiosis-nacl-rules"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-062b093a38407d7c6",
            "owner_id": "090047675933",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-002fed6318038c24b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "symbiosis-private-route"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.eip_main",
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_nat_gateway.ngw_main",
            "module.prod_vpc.aws_subnet.public_subnet",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09a57e197af092669",
            "owner_id": "090047675933",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00284668658012d20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "symbiosis-public-route"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a690a967b0c000fd",
            "route_table_id": "rtb-062b093a38407d7c6",
            "subnet_id": "subnet-0cbff706250135601"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.eip_main",
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_nat_gateway.ngw_main",
            "module.prod_vpc.aws_route_table.private-route",
            "module.prod_vpc.aws_subnet.private_subnet",
            "module.prod_vpc.aws_subnet.public_subnet",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa713b465243436b",
            "route_table_id": "rtb-09a57e197af092669",
            "subnet_id": "subnet-0def2f7e7706c1fa3"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_route_table.public-route",
            "module.prod_vpc.aws_subnet.public_subnet",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:security-group/sg-0cd3720d5d6c518b1",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-0cd3720d5d6c518b1",
            "ingress": [],
            "name": "symbiosis_data_sg",
            "name_prefix": null,
            "owner_id": "090047675933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Monitoring": "true",
              "Name": "symbiosis_data_sg",
              "Type": "EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:security-group/sg-0903b52b088136e14",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-0903b52b088136e14",
            "ingress": [],
            "name": "symbiosis_private_sg",
            "name_prefix": null,
            "owner_id": "090047675933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Monitoring": "true",
              "Name": "symbiosis_private_sg",
              "Type": "EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:security-group/sg-0bb2c4ca182507712",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-0bb2c4ca182507712",
            "ingress": [],
            "name": "symbiosis_public_sg",
            "name_prefix": null,
            "owner_id": "090047675933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Monitoring": "true",
              "Name": "symbiosis_public_sg",
              "Type": "EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_app_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/27"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2943327125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/27"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1718069462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_web_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/27"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-3205587926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_https_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/27"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-146338162",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_outbound_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1245300502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ssh_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/27"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4008107320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "detault_http_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/27"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1653480454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0903b52b088136e14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.private_sg",
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:subnet/subnet-0ef890036c771f728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/27",
            "id": "subnet-0ef890036c771f728",
            "map_public_ip_on_launch": false,
            "owner_id": "090047675933",
            "tags": {
              "Name": "sub_private_symbiosis"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:subnet/subnet-0cbff706250135601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/27",
            "id": "subnet-0cbff706250135601",
            "map_public_ip_on_launch": false,
            "owner_id": "090047675933",
            "tags": {
              "Name": "sub_private_symbiosis"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:subnet/subnet-0def2f7e7706c1fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/27",
            "id": "subnet-0def2f7e7706c1fa3",
            "map_public_ip_on_launch": false,
            "owner_id": "090047675933",
            "tags": {
              "Name": "sub_public_symbiosis"
            },
            "vpc_id": "vpc-005cb3124162389b6"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:090047675933:vpc/vpc-005cb3124162389b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000c853b94f5a8852",
            "default_route_table_id": "rtb-094686208dd11612e",
            "default_security_group_id": "sg-0bb17e2406ab6be6c",
            "dhcp_options_id": "dopt-6fefb408",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005cb3124162389b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094686208dd11612e",
            "owner_id": "090047675933",
            "tags": {
              "Environment": "prod",
              "Name": "symbiosis-vpc"
            }
          }
        }
      ]
    }
  ]
}